LU-2576 osc: fix wakup condition in osc_enter_cache()

In osc_enter_cache(), it should not go to sleep if there isn't
any inflight write RPC.

Signed-off-by: Niu Yawei <yawei.niu@intel.com>
Change-Id: I449cba07bd427749ab023c249d9e200aba1b406a