lustre/osc/osc_cache.c
@@ -1483,6 +1483,15 @@ static int osc_enter_cache_try(struct client_obd *cli,
 	return rc;
 }
 
+static int ocw_granted(struct client_obd *cli, struct osc_cache_waiter *ocw)
+{
+	int rc;
+	client_obd_list_lock(&cli->cl_loi_list_lock);
+	rc = cfs_list_empty(&ocw->ocw_entry) || cli->cl_w_in_flight == 0;
+	client_obd_list_unlock(&cli->cl_loi_list_lock);
+	return rc;
+}
+
 /**
  * The main entry to reserve dirty page accounting. Usually the grant reserved
  * in this function will be freed in bulk in osc_free_grant() unless it fails
@@ -1534,15 +1543,23 @@ static int osc_enter_cache(const struct lu_env *env, struct client_obd *cli,
 		CDEBUG(D_CACHE, "%s: sleeping for cache space @ %p for %p\n",
 		       cli->cl_import->imp_obd->obd_name, &ocw, oap);
 
-		rc = l_wait_event(ocw.ocw_waitq,
-				  cfs_list_empty(&ocw.ocw_entry), &lwi);
+		rc = l_wait_event(ocw.ocw_waitq, ocw_granted(cli, &ocw), &lwi);
 
 		client_obd_list_lock(&cli->cl_loi_list_lock);
-		cfs_list_del_init(&ocw.ocw_entry);
-		if (rc < 0)
-			break;
 
-		rc = ocw.ocw_rc;
+		/* l_wait_event return -EINTR or -ETIMEDOUT */
+		if (rc < 0) {
+			cfs_list_del_init(&ocw.ocw_entry);
+			break;
+		}
+
+		if (!cfs_list_empty(&ocw.ocw_entry)) {
+			rc = -EDQUOT;
+			cfs_list_del_init(&ocw.ocw_entry);
+		} else {
+			rc = ocw.ocw_rc;
+		}
+
 		if (rc != -EDQUOT)
 			break;
 		if (osc_enter_cache_try(cli, oap, bytes, 0)) {
